--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<div class="right-container">
 			<div class="right-content">
 				<div class="about__container">
-					<h2 class="about__subtitle">I'm Clayton Barnett</h2> <span class="about__profession">Front-End Developer</span>
+					<h2 class="about__subtitle">Clayton Barnett</h2> <span class="about__profession">Front-End Developer</span>
 					<p class="about__text"> I'm a formally educated programmer who has been programming for 5 years and is still learning new technologies every week, primarily frontend and python-related technologies. </p>
 					<div class="about__social"> <a href="#" class="about__social-icon"><i class="bx bxl-linkedin"></i></a> <a href="#" class="about__social-icon"><i class="bx bxl-github"></i></a> <a href="#" class="about__social-icon"><i class="bx bxl-dribbble"></i></a> </div>
 				</div>
