--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	</section>
 
 	<!-- ========== About Me & Proficiencies Section ========== -->
-	<section class="section container reveal">
+	<section class="section container reveal" id="about">
 		<div class="row">
 			<div class="column">
 				<h2>About Me</h2>
@@ -190,12 +190,19 @@
 		</div>
 	</section>
 	<footer class="footer-distributed">
-		<div class="footer-right"> <a href="#"><i class="fa-brands fa-facebook-f"></i></a> <a href="#"><i class="fa-brands fa-twitter"></i></i></a> <a href="#"><i class="fa-brands fa-linkedin-in"></i></a> <a href="#"><i class="fa-brands fa-github"></i></a>
+		<div class="footer-right">
+			<a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+			<a href="#"><i class="fa-brands fa-twitter"></i></i></a>
+			<a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+			<a href="#"><i class="fa-brands fa-github"></i></a>
 			<p id="WithLove">Made with <i class="fa-solid fa-heart"></i></p>
 		</div>
 		<div class="footer-left">
-			<p class="footer-links"> <a class="link-1" href="#">Home</a> <a href="#about">About</a> <a href="#projects">Projects</a>
-				<!-- <a href="#">Contact</a> --></p>
+			<p class="footer-links">
+				<a class="link-1" href="#">Home</a>
+				<a href="#about">About</a>
+				<a href="#projects">Projects</a>
+			</p>
 			<p>Handcrafted by Clayton Barnett <i class="fa-regular fa-copyright"></i> 2022</p>
 		</div>
 	</footer>
