--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 					<li class="nav-item"><a href="#about" class="nav-link">About</a></li>
 					<li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
 					<li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
-					<!-- <li class="switch">
+					<li class="switch">
 						<label class="theme-switch" for="checkbox">
 							<input type="checkbox" id="checkbox"/>
 							<div class="slider round"></div>
 						</label>
-					</li> -->
+					</li>
 				</ul>
 				<!-- Hamburger button  -->
 				<div class="hamburger">
