--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 	<header>
 		<!-- ========== Navbar Section ========== -->
-		<nav class="navbar">
+		<nav class="navbar" id="navbar">
 			<h1 class="highlight-logo"><a href="#">&lt;Clay/&gt;</a></h1>
 			<div>
 				<!-- Hamburger Links -->
@@ -203,7 +203,7 @@
 				  <li></li>
 				  <li></li>
 				</ul>
-				<p>Quasi, fugit in cumque cupiditate reprehenderit debitis animi enim eveniet consequatur odit quam quos possimus assumenda dicta fuga inventore ab. </p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vehicula ipsum a arcu cursus vitae congue. </p>
 				<!-- <div class="project_links">
 				  <a href="#" class="project_button" target="_blank"><i class="fa-brands fa-github"></i> Github</a>
 				</div> -->
@@ -231,5 +231,7 @@
 		</div>
 	</footer>
 </body>
+<script>
+</script>
 
 </html>
