--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="theme-color" content="#EF4444" />
+	<meta name="theme-color" media="(prefers-color-scheme: dark)" content="#18181b">
+	<meta name="theme-color" content="#ffffff">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Clayton Barnett | Software Developer</title>
 
