--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="color-scheme" content="dark light">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Clayton Barnett | Software Developer</title>
@@ -40,10 +41,13 @@
 					</li>
 					<li class="switch">
 						<label class="theme-switch" for="checkbox">
-							<input type="checkbox" id="checkbox"/>
+							<input type="checkbox" id="checkbox">
 							<div class="slider round"></div>
 						</label>
 					</li>
+					<!-- <li class="nav-item">
+						<button class="btn-toggle">Toggle Dark-Mode</button>
+					</li> -->
 				</ul>
 				<!-- Hamburger button  -->
 				<div class="hamburger">
@@ -64,7 +68,7 @@
 			<div class="hero_social">
 				<a href="https://www.linkedin.com/in/clayton-barnett2020/" target="_blank" rel="noopener noreferrer" class="hero_social-icon"><i class="fa-brands fa-linkedin-in"></i></a>
 				<a href="https://github.com/cbarnett427" target="_blank" rel="noopener noreferrer" class="hero_social-icon"><i class="fa-brands fa-github"></i></a>
-				<a href="mailto:cbarnett427@live.com?subject=Contact - Mail from Developer Portfolio" target="_blank" rel="noopener noreferrer" class="hero_social-icon"><i class="fa-solid fa-envelope"></i></a>
+				<a href="https://twitter.com/cbarnett427" target="_blank" rel="noopener noreferrer" class="hero_social-icon"><i class="fa-brands fa-twitter"></i></a>
 			</div>
 		</div>
 	</section>
@@ -195,7 +199,7 @@
 				</div>
 			  </div>
 		</div>
-		<div class="project_row reveal">
+		<!-- <div class="project_row reveal">
 			<div class="project_left">
 				<img src="img/card.jpg" alt="Credit card" class="project_img lazy-img" />
 			</div>
@@ -208,11 +212,11 @@
 				  <li></li>
 				</ul>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vehicula ipsum a arcu cursus vitae congue. </p>
-				<!-- <div class="project_links">
+				<div class="project_links">
 				  <a href="#" class="project_button" target="_blank"><i class="fa-brands fa-github"></i> Github</a>
-				</div> -->
+				</div>
 			  </div>
-		</div>
+		</div> -->
 	</section>
 	
 
@@ -221,7 +225,7 @@
 		<div class="footer-right">		
 			<a href="https://www.linkedin.com/in/clayton-barnett2020/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
 			<a href="https://github.com/cbarnett427" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
-			<a href="mailto:cbarnett427@live.com?subject=Contact - Mail from Developer Portfolio" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-envelope"></i></a>
+			<a href="https://twitter.com/cbarnett427" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a>
 			<p id="WithLove">Made with <i class="fa-solid fa-heart"></i></p>
 		</div>
 		<div class="footer-left">
