--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 	<!-- ========== Internal Links ========== -->
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/normalize.css">
-	<script src="js/script.js" async></script>
+	<script src="js/navigation.js" async></script>
+	<script src="js/darkmode.js" async></script>
+	<script src="js/hideonscroll.js" async></script>
+	<script src="js/contact.js" async></script>
+	<script src="js/skillbars.js" async></script>
 
 	<!-- ========== External Links ========== -->
 	<!-- Font Awesome Icons -->
@@ -36,8 +40,7 @@
 					<li class="nav-item"><a href="#about" class="nav-link">About</a></li>
 					<li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
 					<li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
-					<li class="nav-item">
-						<a class="nav-link nav-link--btn btn--show-modal" href="#">Contact</a>
+					<li class="nav-item"><a class="nav-link nav-link--btn btn--show-modal" href="#">Contact</a>
 					</li>
 					<li class="switch">
 						<label class="theme-switch" for="checkbox">
@@ -45,9 +48,6 @@
 							<div class="slider round"></div>
 						</label>
 					</li>
-					<!-- <li class="nav-item">
-						<button class="btn-toggle">Toggle Dark-Mode</button>
-					</li> -->
 				</ul>
 				<!-- Hamburger button  -->
 				<div class="hamburger">
@@ -234,6 +234,7 @@
 				<a href="#about">About</a>
 				<a href="#skills">Skills</a>
 				<a href="#projects">Projects</a>
+				<a class="nav-link--btn btn--show-modal" href="#">Contact</a>
 			</p>
 			<p>Handcrafted by Clayton Barnett <i class="fa-regular fa-copyright"></i> 2022</p>
 		</div>
